--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Smart Stove Agent</title>
+    <title>About Smart Stove Agent</title>
     <meta charset="utf-8">
     <meta name="description" content="Smart Stove Details">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
@@ -44,7 +44,7 @@
                                         <ul>
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li>
-                                                <a href="about.html">About</a>
+                                                <a href="AboutSSA.html">About</a>
 
                                             </li>
                                             <li><a href="#footer">Contacts</a></li>
@@ -246,7 +246,7 @@
                     <div class="heading-divider"></div>
                     <div class="footerdata">
                         <ul class="list list-marked">
-                            <li><a href="about.html" class="applinks">About</a></li>
+                            <li><a href="AboutSSA.html" class="applinks">About</a></li>
                             <li><a href="#footer" class="applinks">Contacts</a></li>
                         </ul>
                     </div>
