--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                                         <ul>
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li>
-                                                <a href="about.html">About</a>
+                                                <a href="AboutSSA.html">About</a>
 
                                             </li>
                                             <li><a href="#footer">Contacts</a></li>
@@ -311,7 +311,7 @@
                     <div class="heading-divider"></div>
                     <div class="footerdata">
                         <ul class="list list-marked">
-                            <li><a href="about.html" class="applinks">About</a></li>
+                            <li><a href="AboutSSA.html" class="applinks">About</a></li>
                             <li><a href="#footer" class="applinks">Contacts</a></li>
                         </ul>
                     </div>
