--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -75,30 +75,30 @@
 
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 1"
-                             src="images/proto1.jpg"
-                             data-image="images/proto1.jpg"
+                             src="images/SS1.jpg"
+                             data-image="images/SS1.jpg"
                              data-description="This is a Lemon Slice"
                              style="display:none;">
                     </a>
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 2"
-                             src="images/proto3.jpg"
-                             data-image="images/proto3.jpg"
+                             src="images/SS3.jpg"
+                             data-image="images/SS3.jpg"
                              data-description="This is a Lemon Slice"
                              style="display:none">
                     </a>
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 3"
-                             src="images/proto4.jpg"
-                             data-image="images/proto4.jpg"
+                             src="images/SS4.jpg"
+                             data-image="images/SS4.jpg"
                              data-description="This is a Lemon Slice"
                              style="display:none">
                         </a>
 
                         <a class="aboutRightLinks">
                             <img alt="Smart Stove Alert - Prototype 4"
-                                 src="images/proto2.jpg"
-                                 data-image="images/proto2.jpg"
+                                 src="images/SS2.jpg"
+                                 data-image="images/SS2.jpg"
                                  data-description="This is a Lemon Slice"
                                  style="display:none">
                         </a>
