--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
                         </div>
                         <div class="contentRight">
-                            <img src="images/proto1.jpg"/>
+                            <img src="images/SS1.jpg"/>
                         </div>
                     </div>
 
