--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@
                             </p>
                             <ul>
 
-                                <li>Kitchen fire causes 510 civilian deaths in the USA<sub>[4]</sub></li>
-                                <li>Property damage of around $12.2 bilion is caused by kitchen fire every year<sub>[4]</sub></li>
+                                <li>Kitchen fire causes 510 civilian deaths in the USA<sup>[4]</sup></li>
+                                <li>Property damage of around $12.2 bilion is caused by kitchen fire every year<sup>[4]</sup></li>
                             </ul>
 
                             <p><u>Source</u></p>
