--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>About Smart Stove Agent</title>
+    <title>About Smart Stove Alert</title>
     <meta charset="utf-8">
     <meta name="description" content="Smart Stove Details">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
@@ -37,7 +37,7 @@
                             <!--<img src="..\images\icon.png" style="width:30px;" />-->
 
                             <a href="index.html" class="appname">
-                                Smart Stove Agent
+                                Smart Stove Alert
                             </a>
                             <span class="apptagname">Saftey begins at home</span>
                         </div>
@@ -115,7 +115,7 @@
             </div>
             <div class="aboutRight">
                 <p>
-                    The SmartStoveAlert is smart. It detects dangerous situatons of the stove before the stove firere happen. It has following features:
+                    The Smart Stove Alert is smart. It detects dangerous situatons of the stove before the stove firere happen. It has following features:
                     <ul>
                         <li><span style="color: #f4511e;">Smart Monitor</span> It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
                         <li><span style="color: #f4511e;">Smart Power Shut Down</span> : It controls electrical or gas stoves. In unsafe conditions it does shut down the electrical power or gas supply in milliseconds to keep your family safe</li>
