--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>Smart Stove Agent</title>
+    <title>Smart Stove Alert</title>
     <meta charset="utf-8">
     <meta name="description" content="Smart Stove Details">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
@@ -36,7 +36,7 @@
                             <!--<img src="..\images\icon.png" style="width:30px;" />-->
 
                             <a href="index.html" class="appname">
-                                Smart Stove Agent
+                                Smart Stove Alert
                             </a>
                             <span class="apptagname">Saftey begins at home</span>
                         </div>
@@ -86,7 +86,7 @@
                             <p>
                                 <span style="font-size: 21px;">
                                     Introducing
-                                    <span style="color: #f4511e;">SMART STOVE AGENT</span>
+                                    <span style="color: #f4511e;">SMART STOVE ALERT</span>
                                     <span style="font-size: 9px;">[Saftey begins at home]</span>
                                     <br />
                                     The smartest way to manage kitchen saftey
