--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -1,7 +1,7 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
-    <title>About Smart Stove Alert</title>
+    <title>Solution - Smart Stove Alert</title>
     <meta charset="utf-8">
     <meta name="description" content="Smart Stove Details">
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
@@ -50,7 +50,7 @@
                                         <ul>
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li>
-                                                <a href="AboutSSA.html">About</a>
+                                                <a href="AboutSSA.html">Solution</a>
 
                                             </li>
                                             <li><a href="#footer">Contacts</a></li>
@@ -194,7 +194,7 @@
                 <div class="hidden">
                     Thank you for your interest in <b>Smart Stove Alert</b>, We are currently out of stock.
                     <p>
-                        We will inform you immediately when next revision of <b>Smart Stove Alert</b> is availabe.
+                        We will inform you immediately when next revision of <b>Smart Stove Alert</b> is available.
                     </p>
                 </div>
             </div>
@@ -252,7 +252,7 @@
                     <div class="heading-divider"></div>
                     <div class="footerdata">
                         <ul class="list list-marked">
-                            <li><a href="AboutSSA.html" class="applinks">About</a></li>
+                            <li><a href="AboutSSA.html" class="applinks">Solution</a></li>
                             <li><a href="#footer" class="applinks">Contacts</a></li>
                         </ul>
                     </div>
