--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                         <ul>
                                             <li class="active"><a href="index.html">Home</a></li>
                                             <li>
-                                                <a href="AboutSSA.html">About</a>
+                                                <a href="AboutSSA.html">Solution</a>
 
                                             </li>
                                             <li><a href="#footer">Contacts</a></li>
@@ -259,7 +259,7 @@
                 <div class="hidden">
                     Thank you for your interest in <b>Smart Stove Alert</b>, We are currently out of stock.
                     <p>
-                        We will inform you immediately when next revision of <b>Smart Stove Alert</b> is availabe.
+                        We will inform you immediately when next revision of <b>Smart Stove Alert</b> is available.
                     </p>
                 </div>
             </div>
@@ -316,7 +316,7 @@
                     <div class="heading-divider"></div>
                     <div class="footerdata">
                         <ul class="list list-marked">
-                            <li><a href="AboutSSA.html" class="applinks">About</a></li>
+                            <li><a href="AboutSSA.html" class="applinks">Solution</a></li>
                             <li><a href="#footer" class="applinks">Contacts</a></li>
                         </ul>
                     </div>
