--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@
                         <div class="contentLeft">
                             <p style="padding-top: 10px;">
                                 An average kitchen is filled with numerous hazards that may go unnoticed until an accident happens,
-                                Kitchen Fire is one of the common reasons for most of the hazzards
+                                Kitchen fires are one of the most serious dangers.
                             </p>
-                            <p>Why take the risk when you can do something about it?</p>
+                            <p>Don't take a risk</p>
                             <br />
                             <p>
                                 <span style="font-size: 21px;">
@@ -95,7 +95,7 @@
 
                         </div>
                         <div class="contentRight">
-                            <img src="images/SS1.jpg" />
+                            <img src="images/SS1.JPG" />
                         </div>
                     </div>
 
