--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 
                         </div>
                         <div class="contentRight">
-                            <img src="images/ss1.jpg" />
+                            <img src="images/SS1.JPG" />
                         </div>
                     </div>
 
