--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
                         </div>
                         <div class="checkOutRight">
                             <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Order Summary</h3>
-                            <img src="images/proto1.jpg" width="75" height="70" style="margin-left:30px; margin-bottom:5px;" />
+                            <img src="images/SS1.JPG" width="75" height="70" style="margin-left:30px; margin-bottom:5px;" />
                             <div class="divRightCart">
                                 <span style="color:#000; font-weight:bold;font-size:12px;">Smart Stove Alert</span>
                                 <br />
