--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -81,30 +81,30 @@
 
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 1"
-                             src="images/ss1.jpg"
-                             data-image="images/ss1.jpg"
+                             src="images/SS1.JPG"
+                             data-image="images/SS1.JPG"
                              data-description="This is a Lemon Slice"
                              style="display:none;">
                     </a>
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 2"
-                             src="images/ss3.jpg"
-                             data-image="images/ss3.jpg"
+                             src="images/SS3.JPG"
+                             data-image="images/SS3.JPG"
                              data-description="This is a Lemon Slice"
                              style="display:none">
                     </a>
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 3"
-                             src="images/ss4.jpg"
-                             data-image="images/ss4.jpg"
+                             src="images/SS4.JPG"
+                             data-image="images/SS4.JPG"
                              data-description="This is a Lemon Slice"
                              style="display:none">
                     </a>
 
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 4"
-                             src="images/ss2.jpg"
-                             data-image="images/ss2.jpg"
+                             src="images/SS2.JPG"
+                             data-image="images/SS2.JPG"
                              data-description="This is a Lemon Slice"
                              style="display:none">
                     </a>
@@ -161,7 +161,7 @@
                         </div>
                         <div class="checkOutRight">
                             <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Order Summary</h3>
-                            <img src="images/ss1.jpg" width="75" height="70" style="margin-left:30px; margin-bottom:5px;" />
+                            <img src="images/SS1.JPG" width="75" height="70" style="margin-left:30px; margin-bottom:5px;" />
                             <div class="divRightCart">
                                 <span style="color:#000; font-weight:bold;font-size:12px;">Smart Stove Alert</span>
                                 <br />
