--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -95,8 +95,8 @@
                     </a>
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Prototype 3"
-                             src="images/SS4.JPG"
-                             data-image="images/SS4.JPG"
+                             src="images/SS4.jpg"
+                             data-image="images/SS4.jpg"
                              data-description="This is a Lemon Slice"
                              style="display:none">
                     </a>
