--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -74,7 +74,7 @@
 
         <!--########################### CONTENT ##################################-->
         <div class="content">
-            <img src="images/bg4.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
+            <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
 
             <div class="aboutLeft">
                 <div id="gallery" style="display:none;">
@@ -174,11 +174,11 @@
                                 <br />
                                 <br />
                                 <span class="spanLeft">Tax</span>
-                                <label id="tax" value="$00.00" class="labelRight">$00.00</label>
+                                <label id="tax" value="$00.00" class="labelRight">$0.00*</label>
                                 <br />
                                 <br />
                                 <span class="spanLeft">Shipping</span>
-                                <label id="shipping" value="$00.00" class="labelRight">$00.00</label>
+                                <label id="shipping" value="$00.00" class="labelRight">$0.00*</label>
                                 <br />
                             </div>
                             <div class="cart-divider"></div>
@@ -186,6 +186,7 @@
                             <label id="shipping" value="$00.00" class="labelRight" style="color:#000; font-size:19px;">$199.99</label>
                             <br />
                             <br />
+                            <span style="font-size:10px;">*Shipping & Tax will be calculated later</span>
                             &nbsp;
                         </div>
                     </div>
