--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
             <div class="swiper-container">
                 <div class="swiper-wrapper">
                     <div class="swiper-slide">
-                        <img src="images/bg4.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
+                        <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
                         <div class="contentLeft">
                             <p style="padding-top: 10px;">
                                 An average kitchen is filled with numerous hazards that may go unnoticed until an accident happens,
@@ -100,7 +100,7 @@
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="images/bg4.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
+                        <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
                         <div class="contentLeft">
                             <p>
                                 <h2><span style="color: #f4511e;">FACTS</span></h2>
@@ -121,7 +121,7 @@
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="images/bg4.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
+                        <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
                         <div class="contentLeft">
                             <p>
                                 <h2><span style="color: #f4511e;">FACTS</span></h2>
@@ -140,7 +140,7 @@
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="images/bg4.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
+                        <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
                         <div class="contentLeft">
                             <p>
                                 <h2><span style="color: #f4511e;">FACTS</span></h2>
@@ -162,7 +162,7 @@
                     </div>
 
                     <div class="swiper-slide">
-                        <img src="images/bg4.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
+                        <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
                         <div class="contentLeft">
                             <p>
                                 <h2><span style="color: #f4511e;">FACTS</span></h2>
@@ -239,11 +239,11 @@
                                 <br />
                                 <br />
                                 <span class="spanLeft">Tax</span>
-                                <label id="tax" value="$00.00" class="labelRight">$00.00</label>
+                                <label id="tax" value="$00.00" class="labelRight">$0.00*</label>
                                 <br />
                                 <br />
                                 <span class="spanLeft">Shipping</span>
-                                <label id="shipping" value="$00.00" class="labelRight">$00.00</label>
+                                <label id="shipping" value="$00.00" class="labelRight">$0.00*</label>
                                 <br />
                             </div>
                             <div class="cart-divider"></div>
@@ -251,6 +251,7 @@
                             <label id="shipping" value="$00.00" class="labelRight" style="color:#000; font-size:19px;">$199.99</label>
                             <br />
                             <br />
+                            <span style="font-size:10px;">*Shipping & Tax will be calculated later</span>
                             &nbsp;
                         </div>
                     </div>
@@ -266,6 +267,55 @@
 
         </div>
 
+        <div class="featureDiv">
+            <h2>Smart Stove Alert Features</h2>
+            <p>Smart Stove Alert is a fantastic device which can make our kitchen safer than before</p>
+            <p>It offers various fearures, Some of them are described below </p>
+
+            <div>
+                <div class="feature">
+                    <div>
+                        <img src="images/SS1.JPG" width="300" height="280" />
+                        <div class="featureImageDiv"></div>
+                    </div>
+                    <div class="featureinner">
+                        Helps in preventing fire on the stove
+                    </div>
+                </div>
+
+                <div class="feature">
+                    <div >
+                        <img src="images/SS4.jpg" width="300" height="280" />
+                        <div class="featureImageDiv"></div>
+                    </div>
+                    <div class="featureinner">
+                        Smart Stove Alert will shuts down your stove before bad things happen
+                    </div>
+                </div>
+
+                <div class="feature">
+                    <div>
+                        <img src="images/SS3.JPG" width="300" height="280" />
+                        <div class="featureImageDiv"></div>
+                    </div>
+                    <div class="featureinner">
+                        It will alarm you in dangerous situation
+                    </div>
+                </div>
+
+                <div class="feature">
+                    <div>
+                        <img src="images/SS2.JPG" width="300" height="280" />
+                        <div class="featureImageDiv"></div>
+                    </div>
+                    <div class="featureinner">
+                        It will alarm you in dangerous situation
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
         <footer class="bg-gray-darker" id="footer">
             <div class="footerdiv">
                 <div class="contactInfo">
@@ -375,11 +425,12 @@
                 }
             });
 
-            Email.send("pankaj_2424@yahoo.co.in",
-                "pankaj_2424@yahoo.co.in",
-                "This is a subject",
-                "this is the body",
-                { token: "8c808dd1-4368-4480-bad9-107f5126277a" });
+            $('ul.navigation').on('click', 'a', function (e) {
+                e.preventDefault();
+                $('html, body').animate({
+                    scrollTop: $($.attr(this, 'href')).offset().top
+                }, 500);
+            });
         });
 
         var swiper = new Swiper('.swiper-container', {
