--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                         <div class="featureImageDiv"></div>
                     </div>
                     <div class="featureinner">
-                        It will alarm you in dangerous situation
+                        Smart Stove Alert protects your loved ones
                     </div>
                 </div>
 
