--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     <!-- JAVASCRIPTS -->
     <script src="layout/scripts/jquery.min.js"></script>
     <script src="layout/scripts/swiper.min.js"></script>
-    <script src="layout/scripts/smtp.js"></script>
+
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
 
 </head>
@@ -208,21 +209,23 @@
                         <div class="checkOutLeft">
                             <span class="cartHeadingLabel">Customer Information</span>
                             <br />
-                            <label class="cartLabel">First Name</label>
-                            <input id="fname" class="cartText" type="text" placeholder="Enter First Name" />
-                            <label class="cartLabel">Last Name</label>
-                            <input id="lname" class="cartText" type="text" placeholder="Enter Last Name" />
-                            <br />
-                            <br />
-                            <label class="cartLabel">Email</label>
-                            <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" />
-                            <br />
-                            <br /><br />
-                            <br /><br />
-                            <br />
-                            <br />
-                            <br />
-                            <button id="checkout" class="cartButton">Next : Proceed Billing Information</button>
+                            <form id="checkOutForm">
+                                <label class="cartLabel" >First Name</label>
+                                <input id="fname" class="cartText" type="text" placeholder="Enter First Name" name="fname" />
+                                <label class="cartLabel">Last Name</label>
+                                <input id="lname" class="cartText" type="text" placeholder="Enter Last Name"  name="lname"/>
+                                <br />
+                                <br />
+                                <label class="cartLabel">Email</label>
+                                <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to"/>
+                                <br />
+                                <br /><br />
+                                <br /><br />
+                                <br />
+                                <br />
+                                <br />
+                                <button id="checkout" class="cartButton">Next : Proceed Billing Information</button>
+                            </form>
                         </div>
                         <div class="checkOutRight">
                             <h3 style="color:#000; text-align:center; font-size:16px; font-weight:bold;">Order Summary</h3>
@@ -316,6 +319,7 @@
 
             </div>
         </div>
+
         <footer class="bg-gray-darker" id="footer">
             <div class="footerdiv">
                 <div class="contactInfo">
@@ -399,6 +403,37 @@
 
 
     <script>
+
+        (function () {
+            emailjs.init("user_XrzzeQbqALn19D64MH8O9");
+        })();
+
+        var myform = $("form#checkOutForm");
+
+        myform.submit(function (event) {
+            event.preventDefault();
+
+            var params = myform.serializeArray().reduce(function (obj, item) {
+                obj[item.name] = item.value;
+                return obj;
+            }, {});
+
+            // Change to your service ID, or keep using the default service
+            var service_id = "default_service";
+
+            var template_id = "smartstove";
+            myform.find("button").text("Processing...");
+            emailjs.send(service_id, template_id, params)
+                .then(function () {
+                    //alert("Sent!");
+                    myform.find("button").text("Next : Proceed Billing Information");
+                }, function (err) {
+                    alert("Send email failed!\r\n Response:\n " + JSON.stringify(err));
+                    myform.find("button").text("Next : Proceed Billing Information");
+                });
+            return false;
+        });
+
 
         $(document).ready(function () {
             $('#checkout').click(function () {
