--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -14,8 +14,9 @@
     <script src="layout/scripts/jquery.min.js"></script>
     <script type='text/javascript' src='layout/scripts/unitegallery.min.js'></script>
     <script type='text/javascript' src='layout/scripts/ug-theme-tiles.js'></script>
+    <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
 
-    
+
 
 
 </head>
@@ -284,17 +285,18 @@
 
         <script type="text/javascript">
 
+
             $(document).ready(function () {
                 $('#checkout').click(function () {
                     var hidden = $('.hidden');
 
-                    if (hidden.hasClass('visible')) {
-                        hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
-                    } else {
-                        hidden.animate({ "left": "200px" }, "slow").addClass('visible');
-                        $('#checkoutcontent').hide();
-                        $('.modal-content').height(200);
-                    }
+                    //if (hidden.hasClass('visible')) {
+                    //    hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
+                    //} else {
+                    //    hidden.animate({ "left": "200px" }, "slow").addClass('visible');
+                    //    $('#checkoutcontent').hide();
+                    //    $('.modal-content').height(200);
+                    //}
                 });
 
                 $('#buynow').click(function () {
@@ -307,14 +309,16 @@
                         hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
                     }
                 });
+
+                $("#gallery").unitegallery();
             });
             /****************************************************************************************************/
 
-            jQuery(document).ready(function () {
+            //jQuery(document).ready(function () {
 
-                jQuery("#gallery").unitegallery();
+            //    jQuery("#gallery").unitegallery();
 
-            });
+            //});
 
             /****************************************************************************************************/
 
@@ -345,6 +349,49 @@
                     modal.style.display = "none";
                 }
             }
+
+
+
+                (function () {
+                    emailjs.init("user_XrzzeQbqALn19D64MH8O9");
+                })();
+
+            var myform = $("form#checkOutForm");
+
+            myform.submit(function (event) {
+                event.preventDefault();
+
+                var params = myform.serializeArray().reduce(function (obj, item) {
+                    obj[item.name] = item.value;
+                    return obj;
+                }, {});
+
+                // Change to your service ID, or keep using the default service
+                var service_id = "default_service";
+
+                var template_id = "smartstove";
+                myform.find("button").text("Processing...");
+                emailjs.send(service_id, template_id, params)
+                    .then(function () {
+                        //alert("Sent!");
+                        myform.find("button").text("Next : Proceed Billing Information");
+                        /***************************************************************************/
+                        var hidden = $('.hidden');
+
+                        if (hidden.hasClass('visible')) {
+                            hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
+                        } else {
+                            hidden.animate({ "left": "200px" }, "slow").addClass('visible');
+                            $('#checkoutcontent').hide();
+                            $('.modal-content').height(200);
+                        }
+                        /***************************************************************************/
+                    }, function (err) {
+                        alert("Send email failed!\r\n Response:\n " + JSON.stringify(err));
+                        myform.find("button").text("Next : Proceed Billing Information");
+                    });
+                return false;
+            });
 
         </script>
     </div>
