--- a/index.html
+++ b/index.html
@@ -7,17 +7,13 @@
     <meta name="keywords" content="HTML,CSS,XML,JavaScript">
     <meta name="author" content="Pankaj Sharma">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <!--<link href="layout/styles/layout.css" rel="stylesheet" type="text/css" media="all">-->
     <link href="layout/styles/SmartStove.css" rel="stylesheet" type="text/css" media="all">
-
     <link rel="stylesheet" href="layout/styles/swiper.min.css">
     <!-- JAVASCRIPTS -->
-    <script src="layout/scripts/jquery.min.js"></script>
-    <script src="layout/scripts/swiper.min.js"></script>
-
+    <script type="text/javascript" src="layout/scripts/jquery.min.js"></script>
+    <script type="text/javascript" src="layout/scripts/swiper.min.js"></script>
     <script type="text/javascript" src="https://cdn.emailjs.com/dist/email.min.js"></script>
-
-
+    <script type="text/javascript" src="layout/scripts/smartstove.js"></script>
 </head>
 <body>
     <div id="warning-message">
@@ -210,14 +206,18 @@
                             <span class="cartHeadingLabel">Customer Information</span>
                             <br />
                             <form id="checkOutForm">
-                                <label class="cartLabel" >First Name</label>
-                                <input id="fname" class="cartText" type="text" placeholder="Enter First Name" name="fname" />
+                                <label class="cartLabel">First Name</label>
+                                <input id="fname" class="cartText" type="text" placeholder="Enter First Name" name="fname" 
+                                 pattern="/^[a-zA-Z ]{2,30}$/" required />
                                 <label class="cartLabel">Last Name</label>
-                                <input id="lname" class="cartText" type="text" placeholder="Enter Last Name"  name="lname"/>
+                                <input id="lname" class="cartText" type="text" placeholder="Enter Last Name" name="lname" 
+                                 pattern="/^[a-zA-Z ]{2,30}$/" required />
                                 <br />
                                 <br />
                                 <label class="cartLabel">Email</label>
-                                <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to"/>
+                                <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to" 
+                                 pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
+                                 required />
                                 <br />
                                 <br /><br />
                                 <br /><br />
@@ -401,134 +401,7 @@
         </footer>
     </div>
 
+    <script type="text/javascript" src="layout/scripts/smartstove.js"></script>
 
-    <script>
-
-        (function () {
-            emailjs.init("user_XrzzeQbqALn19D64MH8O9");
-        })();
-
-        var myform = $("form#checkOutForm");
-
-        myform.submit(function (event) {
-            event.preventDefault();
-
-            var params = myform.serializeArray().reduce(function (obj, item) {
-                obj[item.name] = item.value;
-                return obj;
-            }, {});
-
-            // Change to your service ID, or keep using the default service
-            var service_id = "default_service";
-
-            var template_id = "smartstove";
-            myform.find("button").text("Processing...");
-            emailjs.send(service_id, template_id, params)
-                .then(function () {
-                    //alert("Sent!");
-                    myform.find("button").text("Next : Proceed Billing Information");
-                    /***************************************************************************/
-                    var hidden = $('.hidden');
-
-                    if (hidden.hasClass('visible')) {
-                        hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
-                    } else {
-                        hidden.animate({ "left": "200px" }, "slow").addClass('visible');
-                        $('#checkoutcontent').hide();
-                        $('.modal-content').height(200);
-                    }
-                    /***************************************************************************/
-                }, function (err) {
-                    alert("Send email failed!\r\n Response:\n " + JSON.stringify(err));
-                    myform.find("button").text("Next : Proceed Billing Information");
-                });
-            return false;
-        });
-
-
-        $(document).ready(function () {
-            $('#checkout').click(function () {
-                var hidden = $('.hidden');
-
-                //if (hidden.hasClass('visible')) {
-                //    hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
-                //} else {
-                //    hidden.animate({ "left": "200px" }, "slow").addClass('visible');
-                //    $('#checkoutcontent').hide();
-                //    $('.modal-content').height(200);
-                //}
-            });
-
-            $('#buynow').click(function () {
-
-                $('#checkoutcontent').show();
-                var hidden = $('.hidden');
-
-                $('.modal-content').removeAttr("style");
-
-                if (hidden.hasClass('visible')) {
-                    hidden.animate({ "left": "-1000px" }, 1).removeClass('visible');
-                }
-            });
-
-            $('ul.navigation').on('click', 'a', function (e) {
-                e.preventDefault();
-                $('html, body').animate({
-                    scrollTop: $($.attr(this, 'href')).offset().top
-                }, 500);
-            });
-        });
-
-        var swiper = new Swiper('.swiper-container', {
-            spaceBetween: 30,
-            centeredSlides: true,
-            effect: 'fade',
-            grabCursor: true,
-            touchRatio: 5,
-            speed: 1500,
-            loop: true,
-            autoplay: {
-                delay: 7000,
-                disableOnInteraction: false,
-            },
-            pagination: {
-                el: '.swiper-pagination',
-                clickable: true,
-            },
-            navigation: {
-                nextEl: '.swiper-button-next',
-                prevEl: '.swiper-button-prev',
-            },
-        });
-
-        // Get the modal
-        var modal = document.getElementById('myModal');
-
-
-        // Get the button that opens the modal
-        var btn = document.getElementById("buynow");
-
-        // Get the <span> element that closes the modal
-        var span = document.getElementsByClassName("close")[0];
-
-        // When the user clicks the button, open the modal
-        btn.onclick = function () {
-
-            //modal.style.display = "block";
-            $("#myModal").delay(200).fadeIn();
-        }
-
-        // When the user clicks on <span> (x), close the modal
-        span.onclick = function () {
-            modal.style.display = "none";
-        }
-
-        // When the user clicks anywhere outside of the modal, close it
-        window.onclick = function (event) {
-            if (event.target == modal) {
-                modal.style.display = "none";
-            }
-        }
-    </script>
 </body>
 </html>
