--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                         <div class="featureImageDiv"></div>
                     </div>
                     <div class="featureinner">
-                        Smart Stove Alert will shuts down your stove before bad things happen
+                        Smart Stove Alert will shut down your stove before bad things happen
                     </div>
                 </div>
 
@@ -304,7 +304,7 @@
                         <div class="featureImageDiv"></div>
                     </div>
                     <div class="featureinner">
-                        It will alarm you in dangerous situation
+                        It will alarm you in dangerous situations
                     </div>
                 </div>
 
