--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -116,7 +116,7 @@
                         <li><span style="color: #f4511e;">Smart Monitor</span> : It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
                         <li><span style="color: #f4511e;">Smart Power Shut Down</span> : It controls electrical or gas stoves. In unsafe conditions it does shut down the electrical power or gas supply in milliseconds to keep your family safe</li>
                         <li><span style="color: #f4511e;"> Inter-Connectivity</span>: It's connected to the internet through its Atheros AR9331 Linux Processor with a clock speed of 400MHz. It can call your smartphone or emergency services</li>
-                        <li><span style="color: #f4511e;">Smart Learner</span> It learns continuously and communicates with you through your smartphone. For example you can teach the Smart Stove Alert to authorize a person to operate the stove through face recognition</li>
+                        <li><span style="color: #f4511e;">Smart Learner</span> : It learns continuously and communicates with you through your smartphone. For example you can teach the Smart Stove Alert to authorize a person to operate the stove through face recognition</li>
                     </ul>
                 </p>
             </div>
