--- a/index.html
+++ b/index.html
@@ -217,9 +217,7 @@
                                 <br />
                                 <br />
                                 <label class="cartLabel">Email</label>
-                                <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to"
-                                       pattern="/^[a-zA-Z0-9.!#$%&’*+/=?^_`{|}~-]+@[a-zA-Z0-9-]+(?:\.[a-zA-Z0-9-]+)*$/"
-                                       required />
+                                <input id="email" class="cartEmail" type="email" placeholder="Enter Email Address" name="reply_to" required />
                                 <br />
                                 <br /><br />
                                 <br /><br />
