--- a/AboutSSA.html
+++ b/AboutSSA.html
@@ -1,6 +1,18 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112239346-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-112239346-1');
+    </script>
+
+
     <title>Solution - Smart Stove Alert</title>
     <meta charset="utf-8">
     <meta name="description" content="Smart Stove Details">
@@ -79,10 +91,10 @@
                 <div id="gallery" style="display:none;">
 
                     <a class="aboutRightLinks">
-                        <img alt="Smart Stove Alert - Design 1"
-                             src="images/SS1.JPG"
-                             data-image="images/SS1.JPG"
-                             style="display:none;">
+                        <img alt="Smart Stove Alert - Design 4"
+                             src="images/SS2.JPG"
+                             data-image="images/SS2.JPG"
+                             style="display:none">
                     </a>
                     <a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Design 2"
@@ -91,18 +103,20 @@
                              style="display:none">
                     </a>
                     <a class="aboutRightLinks">
+                        <img alt="Smart Stove Alert - Design 1"
+                             src="images/SS1.JPG"
+                             data-image="images/SS1.JPG"
+                             style="display:none;">
+                    </a>
+
+                    <!--<a class="aboutRightLinks">
                         <img alt="Smart Stove Alert - Design 3"
                              src="images/SS4.jpg"
                              data-image="images/SS4.jpg"
                              style="display:none">
-                    </a>
+                    </a>-->
 
-                    <a class="aboutRightLinks">
-                        <img alt="Smart Stove Alert - Design 4"
-                             src="images/SS2.JPG"
-                             data-image="images/SS2.JPG"
-                             style="display:none">
-                    </a>
+
 
 
 
@@ -110,13 +124,13 @@
             </div>
             <div class="aboutRight">
                 <p>
-                    The Smart Stove Alert is smart. It detects dangerous situations of the stove before fire could happen. 
-                <p>It has following features:</p>
+                    The Smart Stove Alert is is game changer in kitchen safety. It detects dangerous situations of the stove before fire hazard occurs. 
+                <p>It has following specifications:</p>
                     <ul>
-                        <li><span style="color: #f4511e;">Smart Monitor</span> : It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
-                        <li><span style="color: #f4511e;">Smart Power Shut Down</span> : It controls electrical or gas stoves. In unsafe conditions it does shut down the electrical power or gas supply in milliseconds to keep your family safe</li>
+                        <li><span style="color: #f4511e;">Smart Monitor</span>: It monitors the entire stove surface for dangerous situations through a High Sensitivity / Low-Light camera which is powered by the 216 MHz ARM Cortex M7 processor</li>
+                        <li><span style="color: #f4511e;">Smart Power Shut Down</span>: It controls electrical or gas stoves. In unsafe conditions it does shut down the electrical power or gas supply in milliseconds to keep your family safe</li>
                         <li><span style="color: #f4511e;"> Inter-Connectivity</span>: It's connected to the internet through its Atheros AR9331 Linux Processor with a clock speed of 400MHz. It can call your smartphone or emergency services</li>
-                        <li><span style="color: #f4511e;">Smart Learner</span> : It learns continuously and communicates with you through your smartphone. For example you can teach the Smart Stove Alert to authorize a person to operate the stove through face recognition</li>
+                        <li><span style="color: #f4511e;">Smart Learner</span>: It learns continuously and communicates with you through your smartphone. For example you can teach the Smart Stove Alert to authorize a person to operate the stove through face recognition</li>
                     </ul>
                 </p>
             </div>
@@ -195,7 +209,7 @@
 
                 </div>
                 <div class="hidden">
-                    Thank you for your interest in <b>Smart Stove Alert</b>, We are currently out of stock.
+                    Thank you for your interest in <b>Smart Stove Alert</b>. We are currently out of stock.
                     <p>
                         We will inform you immediately when next revision of <b>Smart Stove Alert</b> is available.
                     </p>
