--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 ﻿<!DOCTYPE html>
 <html lang="en-US">
 <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-112239346-1"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'UA-112239346-1');
+    </script>
+
     <title>Smart Stove Alert</title>
     <meta charset="utf-8">
     <meta name="description" content="Smart Stove Details">
@@ -35,7 +46,7 @@
                             <a href="index.html" class="appname">
                                 Smart Stove Alert
                             </a>
-                            <span class="apptagname">Saftey begins at home</span>
+                            <span class="apptagname">Safety begins at home</span>
                         </div>
                         <div class="menu-right">
 
@@ -75,18 +86,18 @@
                         <img src="images/bg4new.jpg" style="width: 100%; height: 500px; opacity: 0.73; position:absolute;" />
                         <div class="contentLeft">
                             <p style="padding-top: 10px;">
-                                An average kitchen is filled with numerous hazards that may go unnoticed until an accident happens,
-                                Kitchen fires are one of the most serious dangers.
+                                An average kitchen is filled with numerous hazards that may go unnoticed until an accident happens.
+                                Kitchen fire is one of the most serious dangers.
                             </p>
-                            <p>Don't take a risk</p>
+                            <p>Don't take a risk, Invest in Smart Safety Device</p>
                             <br />
                             <p>
                                 <span style="font-size: 21px;">
                                     Introducing
                                     <span style="color: #f4511e;">SMART STOVE ALERT</span>
-                                    <span style="font-size: 9px;">[Saftey begins at home]</span>
+                                    <span style="font-size: 9px;">[Safety begins at home]</span>
                                     <br />
-                                    The smartest way to manage kitchen saftey
+                                    The smartest way to manage kitchen safety
                                 </span>
                             </p>
 
@@ -261,7 +272,7 @@
 
                 </div>
                 <div class="hidden">
-                    Thank you for your interest in <b>Smart Stove Alert</b>, We are currently out of stock.
+                    Thank you for your interest in <b>Smart Stove Alert</b>. We are currently out of stock.
                     <p>
                         We will inform you immediately when next revision of <b>Smart Stove Alert</b> is available.
                     </p>
@@ -272,7 +283,9 @@
 
         <div class="featureDiv">
             <h2>Smart Stove Alert Features</h2>
-            <p>Smart Stove Alert is a fantastic device which can make our kitchen safer than before</p>
+            <p>
+                Smart Stove Alert is an innovative device our kitchen safer
+            </p>
             <p>It offers various fearures, Some of them are described below </p>
 
             <div>
@@ -292,7 +305,7 @@
                         <div class="featureImageDiv"></div>
                     </div>
                     <div class="featureinner">
-                        Smart Stove Alert will shut down your stove before bad things happen
+                        Smart Stove Alert will shut down your stove before accidents happen
                     </div>
                 </div>
 
@@ -302,7 +315,7 @@
                         <div class="featureImageDiv"></div>
                     </div>
                     <div class="featureinner">
-                        It will alarm you in dangerous situations
+                        It will alert you in dangerous situations
                     </div>
                 </div>
 
