--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                                 An average kitchen is filled with numerous hazards that may go unnoticed until an accident happens.
                                 Kitchen fire is one of the most serious dangers.
                             </p>
-                            <p>Don't take a risk, Invest in Smart Safety Device</p>
+                            <p>Don't take a risk, invest in Smart Safety device</p>
                             <br />
                             <p>
                                 <span style="font-size: 21px;">
