--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
         <div class="featureDiv">
             <h2>Smart Stove Alert Features</h2>
             <p>
-                Smart Stove Alert is an innovative device our kitchen safer
+                Smart Stove Alert is an innovative device which can make our kitchen safer
             </p>
             <p>It offers various fearures, Some of them are described below </p>
 
